--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
     <div class="hero-container">
       <!-- Left Side - Text -->
       <div class="hero-text">
-        <h1>JavaScript Projects</h1>
+        <h1>JavaScript Projects - Robert M</h1>
         <p>Projects are the most practical way to learn any language, and <span>JavaScript</span> is no exception. Here are projects i've worked on to solidify my experience.</p>
         <a href="images\2024_ResumeRobertMezian.pdf" class="yellow-btn" target="_blank">VIEW RESUME</a>
       </div>
